create endopoint of auth
