# models/User.js
@@ -16,6 +16,11 @@ const userSchema = new Schema({
     lowercase: true,
     trim: true,
   },
+  password: {
+    type: String,
+    required: true,
+    default: "",
+  },
 });
 
 const User = model("User", userSchema);
