# validators/auth/loginSchema.js
@@ -1,0 +1,8 @@
+const joi = require("joi");
+
+const loginSchema = joi.object({
+  email: joi.string().required(),
+  password: joi.string().required(),
+});
+
+module.exports = { loginSchema };
